[package]
name = "hook-nyseh"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hook_nyseh"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = {version = "0.32.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.32.1", features = ["metadata"]}
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
